--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "apa-website",
   "version": "1.0.0",
-  "description": "",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon ./server.js"
+    "dev": "nodemon ./server.js",
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
@@ -35,5 +35,6 @@
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
-  }
+  },
+  "description": ""
 }
