--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "express-session": "^1.17.2",
     "mongodb": "^4.5.0",
     "mongoose": "^6.2.10",
+    "node-fetch": "^2.0.0",
     "passport": "^0.5.2",
     "passport-local": "^1.0.0"
   },
