--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "ejs": "^3.1.6",
     "express": "^4.17.3",
     "express-session": "^1.17.2",
+    "method-override": "^3.0.0",
     "mongodb": "^4.5.0",
     "mongoose": "^6.2.10",
     "node-fetch": "^2.0.0",
